improve HIDDEN support in navigation component